@@ -1280,7 +1280,6 @@ __ZN7WebCore6Editor7CommandC1Ev
 __ZN7WebCore6Editor7commandERKN3WTF6StringE
 __ZN7WebCore6Editor7copyURLERKNS_3URLERKN3WTF6StringE
 __ZN7WebCore6Editor7outdentEv
-__ZN7WebCore6Editor9copyImageERKNS_13HitTestResultE
 __ZN7WebCore6JSNode6s_infoE
 __ZN7WebCore6JSNode9toWrappedEN3JSC7JSValueE
 __ZN7WebCore6LengthC1EN3WTF7PassRefINS_16CalculationValueEEE
@@ -2509,6 +2508,10 @@ _wkNSReboundDeltaForElasticDelta
 
 #if PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 1090
 _wkCreateMemoryStatusPressureCriticalDispatchOnMainQueue
+#endif
+
+#if !PLATFORM(IOS)
+__ZN7WebCore6Editor9copyImageERKNS_13HitTestResultE
 #endif
 
 #if PLATFORM(IOS)
