@@ -1,3 +1,9 @@
+2014-11-12  Beth Dakin  <bdakin@apple.com>
+
+        Speculative build fix.
+
+        * WebCore.exp.in:
+
 2014-11-12  Timothy Horton  <timothy_horton@apple.com>
 
         Fix the iOS build.
